--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "typescript": "^4.0.3",
+    "styled-components": "^5.2.1",
+    "typescript": "^3.7.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.4"
   }
 }
